--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -65,9 +65,21 @@
     "seral_actor": "Dizi Aktörü",
 
     "next_page": "Sonraki Sayfa",
-    "previous_page": "Önceki Sayfa"
+    "previous_page": "Önceki Sayfa",
 
-    
+    "no_watch_to_description": "Bu dizi için izleme seçeneği bulunmamaktadır.",
+    "light_mode": "Açık Tema",
+    "dark_mode": "Karanlık Tema",
+    "where_to_watch_buy": "Where Can I Buy?",
+    "where_to_watch": "Nereden Satın Alabilirim?",
 
+    "movie_of_the_day": "Günün Film Önerisi",
+    "see_the_movie": "Filmi Gör",
+
+    "enable_location_access_to_see_nearby_cinemas": "Yakınınızdaki sinemaları görmek için konum erişimini etkinleştirin.",
+    "enable_location_access": "Konum Erişimini Etkinleştir",
+    "please_grant_location_permissions": "Lütfen konum izinlerini veriniz",
+    "allow_location": "Konum İzni Ver",
+    "searching_for_locations": "Konumlar aranıyor..."
 
 }
