--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -83,5 +83,13 @@
     "searching_for_locations": "Konumlar aranıyor...",
     "should_watch" : "Film önerisi almak için bu kısımdan ayarlama yapabilirsiniz",
     "change_language":"Dil değişimi için bu kısımdan ayarlama yapabilirsiniz",
-    "movie_recommendation":"Film Önerisi"
+    "movie_recommendation":"Film Önerisi",
+
+    "copy_address": "Adresi Kopyal",
+    "get_directions": "Yol Tarifi Al",
+    "cinema_picture_not_found": "Sinema resimi bulunamadı",
+    "address_copied": "Adres koyalandı",
+
+    "movie_added_to_favorites" : "Film favorilere eklendi",
+    "series_added_to_favorites" : "Dizi favorilere eklendi"
 }
